<resources>
    <string name="app_name">NBC-register</string>
    <string name="id">아이디</string>
    <string name="hint_for_id">아이디를 입력하세요.</string>
    <string name="pw">비밀번호</string>
    <string name="hint_for_pw">비밀번호를 입력하세요.</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="name">이름</string>
    <string name="hint_for_name">이름을 입력하세요.</string>
    <string name="check_id_and_pw">아이디, 비밀번호를 확인해주세요.</string>
    <string name="login_success">로그인 성공</string>
    <string name="missing_input_exist">입력되지 않은 정보가 있습니다</string>
    <string name="missing_id_input">아이디를 입력하세요.</string>
    <string name="missing_pw_input">비밀번호를 입력하세요.</string>
    <string name="prefix_id">"아이디 : "</string>
    <string name="prefix_name">"이름 : "</string>
    <string name="prefix_age">"나이 : "</string>
    <string name="mbti_prefix">"MBTI : "</string>
    <string name="exit">종료</string>
    <string name="pw_length_is_no_correct">비밀번호를 8 ~ 16자내로 입력해주세요.</string>
    <string name="capital_is_not_contained">비밀번호에 대문자를 1개 이상 포함해주세요.</string>
    <string name="special_character_is_not_contained">비밀번호에 특수문자(%1$s)를 1개 이상 포함해주세요.</string>
    <string name="not_allowed_character_is_contained">비밀번호에서 허용되지 않은 특수문자를 지워주세요.</string>
    <string name="home_activity_should_get_id">HomeActivity를 호출하는 곳에서 ID를 전달해야 합니다.</string>
    <string name="home_activity_should_get_name">HomeActivity를 호출하는 곳에서 NAME을 전달해야 합니다.</string>
    <string name="id_is_already_registered">해당 아이디는 이미 사용중입니다.</string>
</resources>