<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInActivity">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/id"
        app:layout_constraintStart_toStartOf="@id/edit_text_id"
        app:layout_constraintTop_toBottomOf="@id/image_view_logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/hint_for_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_id" />

    <TextView
        android:id="@+id/text_view_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pw"
        app:layout_constraintStart_toStartOf="@id/edit_text_id"
        app:layout_constraintTop_toBottomOf="@id/edit_text_id" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_for_pw"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/edit_text_id"
        app:layout_constraintStart_toStartOf="@id/edit_text_id"
        app:layout_constraintTop_toBottomOf="@id/text_view_pw" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@id/edit_text_id"
        app:layout_constraintStart_toStartOf="@id/edit_text_id"
        app:layout_constraintTop_toBottomOf="@id/edit_text_pw" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@id/edit_text_id"
        app:layout_constraintStart_toStartOf="@id/edit_text_id"
        app:layout_constraintTop_toBottomOf="@id/button_login" />



</androidx.constraintlayout.widget.ConstraintLayout>